# Kanaya

./: .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
common/: Cargo.toml
common/src/: build_common.rs  lib.rs
control_preview/: Cargo.toml  build.rs
control_preview/src/: control_preview.h  hook.c  main.rs  main_window.rs  uxthemehook.rs
main_gui/: Cargo.toml  build.rs
main_gui/resources/: manifest.xml  resource.h  resource.rc
main_gui/src/: about_window.rs  main.rs  main_window.rs
restyle/kanayacpp/: restylekanaya.rc  rskan_dllmain.cpp
restyle/srcpatches/: Restyle.vcxproj.diff  restyle.cpp.diff
restyle/stub/: RestyleStub.vcxproj  stub.c
src/: about_window.rs  main_window.rs
src/controls/: dock_panel.rs
