[package]
name = "kanaya"
description = "GUI editor for Microsoft Windows visual styles."
authors = [ "Isabella Lulamoon <kawapure@gmail.com>" ]
repository = "https://github.com/NetworkNeighborhood/kanaya"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
winsafe = { version = "0.0.22", features = [ "gui", "user", "comctl", "shell" ] }

[dependencies.windows]
version = "0.59"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = { git = "https://github.com/radkum/winres" }
chrono = "0.4.39"
bindgen = "0.71.0"
